tests/ui/type-alias-impl-trait/impl_trait_for_same_tait.stderr
error[E0119]: conflicting implementations of trait `Bop` for type `Bar<()>`
  --> $DIR/impl_trait_for_same_tait.rs:17:1
   |
LL | impl Bop for Bar<()> {}
   | -------------------- first implementation here
...
LL | impl Bop for Bar<i32> {}
   | ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Bar<()>`

error[E0119]: conflicting implementations of trait `Bop` for type `Bar<()>`
  --> $DIR/impl_trait_for_same_tait.rs:26:1
   |
LL | impl Bop for Bar<()> {}
   | -------------------- first implementation here
...
LL | impl Bop for Barr {}
   | ^^^^^^^^^^^^^^^^^ conflicting implementation for `Bar<()>`
   |
   = note: upstream crates may add a new impl of trait `std::marker::FnPtr` for type `Barr` in future versions

error[E0119]: conflicting implementations of trait `Bop` for type `Bar<()>`
  --> $DIR/impl_trait_for_same_tait.rs:30:1
   |
LL | impl Bop for Bar<()> {}
   | -------------------- first implementation here
...
LL | impl Bop for i32 {}
   | ^^^^^^^^^^^^^^^^ conflicting implementation for `Bar<()>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
